[package]
name = "saito-analytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
saito-core = { path = "../saito-core" }
saito-rust = { path = "../saito-rust" }
tokio = { version = "1.24.2", features = ["full", "tracing"] }
tungstenite = { version = "0.19.0" }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
pretty_env_logger = "0.5.0"
async-trait = "0.1.68"
lazy_static = "1.4.0"
figment = { version = "0.10.8", features = ["json"] }
futures = { version = "0.3.25", default-features = false }
rand = "0.8.5"
rayon = "1.6.1"
ahash = "0.8.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
hex = "0.4.3"
warp = "0.3.3"
reqwest = "0.11.14"
base64 = "0.21.0"
ctrlc = { version = "3.2.4", features = ["termination"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
clap = "3"
bs58 = "0.5.0"


[dev-dependencies]
serial_test = "0.10.0"
ctor = "0.1.26"
criterion = "0.4.0"

[profile.dev]
panic = "unwind"

[features]
default = ["with-stats", "saito-core/with-rayon"]
locking-logs = ["saito-core/locking-logs"]
with-stats = ["saito-core/with-stats"]

[profile.release]
debug = true
lto = true