[package]
name = "saito-core"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["sync", "tokio-macros", "test-util", "macros", "tracing"] }
secp256k1 = { version = "0.27.0", features = ["rand", "bitcoin_hashes", "global-context", "serde"] }
getrandom = { version = "0.2.8", features = ["js"] }
rand = { version = "0.8.5", features = ["getrandom"] }
pretty_env_logger = "0.5.0"
byteorder = "1.4.3"
blake3 = { version = "1.3.3", features = ["rayon"] }
aes = "0.7.5"
block-modes = "0.8.1"
merkle = "1.11.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "2.2.0"
hex = "0.4.3"
ahash = "0.8.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
async-recursion = "1.0.2"
rayon = "1.6.1"
async-trait = "0.1.68"
primitive-types = "0.12.1"
futures = { version = "0.3.25" }
log = "0.4.17"
bs58 = "0.5.0"

[dev-dependencies]
serial_test = "0.10.0"
tokio = { version = "1.24.2", features = ["full"] }
criterion = { version = "0.4.0", features = ["default", "html_reports"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[features]
locking-logs = []
with-stats = []
with-rayon = []

[[bench]]
name = "benches"
harness = false

[profile.release]
debug = true
lto = true
