[package]
name = "saito-core"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
tokio = { version = "1.33.0", features = ["sync", "tokio-macros", "test-util", "macros", "tracing"] }
secp256k1 = { version = "0.28.0", features = ["rand", "hashes", "global-context", "serde"] }
getrandom = { version = "0.2.11", features = ["js"] }
rand = { version = "0.8.5", features = ["getrandom"] }
pretty_env_logger = "0.5.0"
byteorder = "1.5.0"
blake3 = { version = "1.5.0", features = ["rayon"] }
aes = "0.7.5"
block-modes = "0.8.1"
merkle = "1.11.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_with = "3.4.0"
hex = "0.4.3"
ahash = "0.8.6"
num-derive = "0.4.1"
num-traits = "0.2.17"
async-recursion = "1.0.5"
rayon = "1.8.0"
async-trait = "0.1.73"
primitive-types = "0.12.2"
futures = { version = "0.3.29" }
log = "0.4.20"
bs58 = "0.5.0"

[dev-dependencies]
serial_test = "2.0.0"
tokio = { version = "1.34.0", features = ["full"] }
criterion = { version = "0.5.1", features = ["default", "html_reports"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[features]
locking-logs = []
with-stats = []
with-rayon = []

[[bench]]
name = "benches"
harness = false

[profile.release]
debug = true
lto = true
