[package]
name = "saito-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "saito_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
saito-core = { path = "../saito-core" }
tokio = { version = "1.36.0", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
async-trait = "0.1.80"
rand = { version = "0.8.5", features = ["getrandom"] }
secp256k1 = { version = "0.29.0", features = ["hashes", "global-context", "serde"] }
bs58 = "0.5.0"
figment = { version = "0.10.12", features = ["json"] }
serde_json = { version = "1.0.117" }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.19" }
hex = "0.4.3"

[features]
default = ["pyo3/experimental-async"]