[package]
name = "saito-rust"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
saito-core = { path = "../saito-core" }
tokio = { version = "1.24.2", features = ["full", "tracing"] }
tungstenite = { version = "0.20.1" }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
pretty_env_logger = "0.5.0"
async-trait = "0.1.68"
lazy_static = "1.4.0"
figment = { version = "0.10.8", features = ["json"] }
futures = { version = "0.3.25", default-features = false }
rand = "0.8.5"
rayon = "1.8.0"
ahash = "0.8.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
hex = "0.4.3"
warp = "0.3.6"
reqwest = "0.11.22"
base64 = "0.21.4"
ctrlc = { version = "3.4.1", features = ["termination"] }
serde = { version = "1.0.188", features = ["derive"] }
log = "0.4.20"
bs58 = "0.5.0"
clap = "3.2.25"

[dev-dependencies]
serial_test = "0.10.0"
ctor = "0.2.5"
criterion = "0.4.0"

[profile.dev]
panic = "unwind"

[features]
default = ["with-stats", "saito-core/with-rayon"]
locking-logs = ["saito-core/locking-logs"]
with-stats = ["saito-core/with-stats"]

[profile.release]
debug = true
lto = true
