[package]
name = "saito-spammer"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
saito-core = { path = "../saito-core" }
saito-rust = { path = "../saito-rust" }
tokio = { version = "1.33.0", features = ["full", "tracing"] }
figment = { version = "0.10.8", features = ["json"] }
futures = { version = "0.3.28", default-features = false }
rayon = "1.9.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
hex = "0.4.3"
ctrlc = { version = "3.2.4", features = ["termination"] }
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.17"

[dev-dependencies]
serial_test = "3.0.0"
ctor = "0.2.5"
criterion = "0.5.1"

[profile.dev]
panic = "unwind"

[features]
default = ["with-stats", "saito-core/with-rayon", "saito-rust/default"]
locking-logs = ["saito-core/locking-logs"]
with-stats = ["saito-core/with-stats"]

[profile.release]
debug = true
lto = true
