[package]
name = "saito-wasm"
version = "0.1.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
saito-core = { path = "../saito-core" }
wasm-bindgen = { version = "0.2.87" }
wasm-bindgen-futures = "0.4.37"
serde = { version = "1.0.189", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.0" }
web-sys = "0.3.64"
async-trait = "0.1.74"
hex = "0.4.3"
tokio = "1.33.0"
js-sys = { version = "0.3.64" }
lazy_static = "1.4.0"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.20"
getrandom = { version = "0.2.10", features = ["js", "std"] }
rand = { version = "0.8.5", features = ["getrandom"] }
secp256k1 = { version = "0.28.0", features = ["hashes", "global-context", "serde"] }
bs58 = "0.5.0"
figment = { version = "0.10.11", features = ["json"] }
serde_json = { version = "1.0.107" }
num-derive = { version = "0.4.1" }
num-traits = { version = "0.2.17" }
wee_alloc = "0.4.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[profile.release]
lto = true

[features]
default = []
